Prevent wrapping on drinks page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1809,7 +1809,7 @@ section {
 				overflow: hidden;
 				text-overflow: ellipsis;
 				small {
-					font-size:17px;
+					font-size:16px;
 			    font-weight:300;
 					white-space: nowrap;
 					text-transform: capitalize;
@@ -1876,7 +1876,6 @@ section {
 				    // margin: 10px 0;
 					}
 					.thumb-action {
-
 					}
 					ul li a small {
 						font-size: 14px;
@@ -1892,7 +1891,11 @@ section {
 								color: inherit;
 						    text-decoration: none;
 						    font-size: 16px;
-						    padding: 5px 8px;
+								padding-top: 5px;
+								padding-bottom: 5px;
+								padding-left: 0px;
+								padding-right: 0px;
+						    //padding: 5px 8px;
 						    background: #fff;
 						    border-radius: 5px;
 						    border: 2px solid #41B54B;
@@ -1903,13 +1906,14 @@ section {
 						}
 						> li:not(.drop) {
 							a {
-								font-size: 11px;
+								font-size: 14px;
 							}
 						}
 						> li.price {
-							font-size: 24px;
+							font-size: 23px;
 							line-height: 24px;
-							margin: 0 10px;
+							margin: 0 6px;
+							margin-bottom: 5px;
 						}
 						> li.drop {
 							position: relative;
@@ -3636,7 +3640,7 @@ section {
 					display: block; /* Fallback for non-webkit */
 					display: -webkit-box;
 					//height: 100px;
-					max-width: 400px;
+					//max-width: 400px;
 					height: $font-size*$line-height*$lines-to-show - 2; /* Fallback for non-webkit */
 					margin: 0 auto;
 					font-size: $font-size;
